# serializer version: 1
# name: test_grand_summary_rows_snap[pd_and_pl]
  '''
  <tbody class="gt_table_body">
    <tr>
      <th class="gt_row gt_left gt_stub">&nbsp;</th>
      <td class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">&nbsp;</th>
      <td class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">&nbsp;</th>
      <td class="gt_row gt_right">3</td>
      <td class="gt_row gt_right">6</td>
    </tr>
    <tr>
      <th class="gt_first_grand_summary_row_bottom gt_row gt_left gt_stub gt_grand_summary_row">Average</th>
      <td class="gt_first_grand_summary_row_bottom gt_row gt_right gt_grand_summary_row">2.0</td>
      <td class="gt_first_grand_summary_row_bottom gt_row gt_right gt_grand_summary_row">5.0</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub gt_grand_summary_row">Maximum</th>
      <td class="gt_row gt_right gt_grand_summary_row">3</td>
      <td class="gt_row gt_right gt_grand_summary_row">6</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_grand_summary_rows_with_group_as_col_snap
  '''
  <tbody class="gt_table_body">
    <tr>
    <th class="gt_row gt_left gt_stub_row_group"
      rowspan="1">x</th>
      <td class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
    <th class="gt_row gt_left gt_stub_row_group"
      rowspan="1">y</th>
      <td class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub gt_grand_summary_row gt_first_grand_summary_row_bottom" colspan="1">Average</th>
      <td class="gt_first_grand_summary_row_bottom gt_row gt_right gt_grand_summary_row">1.5</td>
      <td class="gt_first_grand_summary_row_bottom gt_row gt_right gt_grand_summary_row">4.5</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_grand_summary_rows_with_rowname_snap
  '''
  <tbody class="gt_table_body">
    <tr>
      <th class="gt_row gt_left gt_stub">x</th>
      <td class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">y</th>
      <td class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">5</td>
    </tr>
    <tr>
      <th class="gt_first_grand_summary_row_bottom gt_row gt_left gt_stub gt_grand_summary_row">Average</th>
      <td class="gt_first_grand_summary_row_bottom gt_row gt_right gt_grand_summary_row">1.5</td>
      <td class="gt_first_grand_summary_row_bottom gt_row gt_right gt_grand_summary_row">4.5</td>
    </tr>
  </tbody>
  '''
# ---
# name: test_row_group_order
  '''
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">b</th>
    </tr>
    <tr>
      <td class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">4</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">a</th>
    </tr>
    <tr>
      <td class="gt_row gt_right">1</td>
      <td class="gt_row gt_right">3</td>
    </tr>
  </tbody>
  '''
# ---
